--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "Gruntfile.js",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-clear": "^0.2.1",
     "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-handlebars": "^0.9.2",
